# TRABALHO02-SISTEMAS-DISTRIBUIDOS

./: README.md  pyproject.toml
client/security/: pubspec.yaml
client/security/android/app/: build.gradle.kts
client/security/android/app/src/main/: AndroidManifest.xml
client/security/lib/: main.dart
server/: .env  helpers.py  main.py  settings.py
